# shader-benchmarking

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
cuda/: matrix_reduction_runner.cu
native/src/: f64_matrix.rs  gpu_pipeline.rs  lib.rs  matrix.rs
scripts/: build-native.mjs  build-wasm.mjs  clean.mjs
src/: benchmark.ts  cuda-matrix-runner.ts  demo.ts  f64-matrix.ts  f64-view.ts  gpu-demo.ts  index.ts  ipc-node-worker.ts  ipc-protocol.ts  matrix-aggregation-benchmark.ts  matrix-aggregation-demo.ts  mutation.ts  u32-view.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
