[package]
name = "sharing_memory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "native/src/lib.rs"

[[bin]]
name = "ipc_rust_worker"
path = "native/src/bin/ipc_rust_worker.rs"

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
